Removed extra padding where possible. Unable to use container-fluid due to other side effects.  Fix #228.

--- a/style/core.css
+++ b/style/core.css
@@ -27,9 +27,9 @@
     overflow-x: visible; /* Override Boost. */
 }
 
-#region-main,
+#region-main
 .pagelayout-mydashboard #region-main {
-    padding: 0 15px; /* Override Boost. */
+    padding: 0 5px; /* Override Boost. */
 }
 
 .progressbar_container {
